[Launch Instance Fix] Wizard should have max-width of 1440px
Currently, the wizard takes the whole screen with a min-width of
1024 px. When the browser is too wide, the layout looks odd. UX design
decide to set a max-width for the wizard and it should be centered
on the screen.

Also add:
- max-height: 900px.
- margin to left and right only when screen width > 1000px.
- margin to top and bottom only when screen height > 600px.

CLoses-Bug: #1434692

--- a/horizon/static/angular/wizard/wizard.scss
+++ b/horizon/static/angular/wizard/wizard.scss
@@ -248,17 +248,41 @@
     margin: 0 auto;
     height: $wizardHeight;
     width: $wizardWidth;
-    min-height: $wizardMinHeight;
-    min-width: $wizardMinWidth;
+
+    // $wizardMaxHeight is the max height of the modal content without
+    // padding, so need to add the padding here.
+    max-height: $wizardMaxHeight + $wizardTopPadding + $wizardBottomPadding;
+
+    // $wizardMaxWidth is the max width of the modal content without
+    // padding, so need to add the padding here.
+    max-width: $wizardMaxWidth + $wizardLeftPadding + $wizardRightPadding;
+
+    // $wizardMinHeight is the min height of the modal content without
+    // padding, so need to add the padding here.
+    min-height: $wizardMinHeight + $wizardTopPadding + $wizardBottomPadding;
+
+    // $wizardMinWidth is the min with of the modal content without
+    // padding, so need to add the padding here.
+    min-width: $wizardMinWidth + $wizardLeftPadding + $wizardRightPadding;
     overflow-x: auto;
 
     .modal-content {
       position: absolute;
       top: $wizardTopPadding;
-      left: 0;
-      right: 0;
+      left: $wizardLeftPadding;
+      right: $wizardRightPadding;
       bottom: $wizardBottomPadding;
       border-radius: 0;
+
+      @media (max-width: 1000px) {
+        left: 0;
+        right: 0;
+      }
+
+      @media (max-height: 600px) {
+        top: 0;
+        bottom: 0;
+      }
     }
   }
 }
